[package]
name = "tomuss-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
lyon1_cas_client = {git = "https://github.com/FlashOnFire/lyon1_cas_client"}
soup = "0.5.1"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
urlencoding = "2.1.3"
rayon = "1.10.0"

[dev-dependencies]
dotenvy = "0.15.7"
